examples/telecomp/ui/style.css
* {
    box-sizing: border-box;
}

html {
    height: 100%;
}

body {
    height: 100%;
    margin: 0;
    background: #802020;
}

a {
    color: #fff;
}

#overscan {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

#main {
    display: flex;
    flex-direction: column;
    height: 100%;
    padding:  10px;
    font-family: monospace;
    font-size: 1.25em;
    color: #fff;
    background: #802020;
}

